[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/star/star2.png" type="Texture" id=3]
[ext_resource path="res://assets/Screenshot 2025-05-16 225126.png" type="Texture" id=4]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
score_to_complete_level = 150

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 105.0
one_shot = true
autostart = true

[node name="TimeLeft" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_top = 95.0
margin_right = 80.0
margin_bottom = 151.0

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -375.0
margin_top = 54.0
margin_right = -261.0
margin_bottom = 94.0

[node name="ProgressBar" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -207.0
margin_right = 208.0
margin_bottom = 30.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0.65098, 0.243137, 0.243137, 1 )
tint_progress = Color( 0.156863, 0.643137, 0.2, 1 )

[node name="HSlider" type="HSlider" parent="."]
visible = false
margin_left = 121.0
margin_top = 165.0
margin_right = 368.0
margin_bottom = 181.0

[node name="HealthBar" type="TextureProgress" parent="."]
visible = false
margin_right = 383.0
margin_bottom = 91.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0.156863, 0.054902, 0.054902, 1 )
tint_progress = Color( 0.85098, 0.0784314, 0.0784314, 1 )

[node name="Hearts" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Heart1" type="Sprite" parent="Hearts"]
position = Vector2( 70, 22 )
scale = Vector2( 0.048, 0.048 )
texture = ExtResource( 3 )

[node name="Star5" type="Sprite" parent="Hearts"]
position = Vector2( 185, 22 )
scale = Vector2( 0.048, 0.048 )
texture = ExtResource( 3 )

[node name="Star6" type="Sprite" parent="Hearts"]
position = Vector2( 310, 22 )
scale = Vector2( 0.048, 0.048 )
texture = ExtResource( 3 )

[node name="Stars" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -33, -245 )

[node name="Star1" type="Sprite" parent="Stars"]
position = Vector2( -91, 64 )
scale = Vector2( 0.048, 0.048 )
texture = ExtResource( 3 )

[node name="Star2" type="Sprite" parent="Stars"]
position = Vector2( 24, 64 )
scale = Vector2( 0.048, 0.048 )
texture = ExtResource( 3 )

[node name="Star3" type="Sprite" parent="Stars"]
position = Vector2( 149, 64 )
scale = Vector2( 0.048, 0.048 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="LevelComplete" type="CanvasLayer" parent="."]
pause_mode = 2
visible = false

[node name="PanelContainer" type="PanelContainer" parent="LevelComplete"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -196.0
margin_right = 150.0
margin_bottom = 196.0

[node name="VBoxContainer" type="VBoxContainer" parent="LevelComplete/PanelContainer"]
pause_mode = 2
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 385.0
rect_clip_content = true

[node name="PanelContainer" type="PanelContainer" parent="LevelComplete/PanelContainer/VBoxContainer"]
margin_right = 286.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="LevelComplete/PanelContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 279.0
margin_bottom = 21.0
text = "Level Complete"

[node name="Star1" type="Sprite" parent="LevelComplete/PanelContainer/VBoxContainer/PanelContainer"]
position = Vector2( 32, 25 )
scale = Vector2( 0.048, 0.048 )
texture = ExtResource( 3 )

[node name="Star2" type="Sprite" parent="LevelComplete/PanelContainer/VBoxContainer/PanelContainer"]
position = Vector2( 147, 25 )
scale = Vector2( 0.048, 0.048 )
texture = ExtResource( 3 )

[node name="Star3" type="Sprite" parent="LevelComplete/PanelContainer/VBoxContainer/PanelContainer"]
position = Vector2( 272, 25 )
scale = Vector2( 0.048, 0.048 )
texture = ExtResource( 3 )

[node name="Restart" type="Button" parent="LevelComplete/PanelContainer/VBoxContainer"]
pause_mode = 2
margin_top = 32.0
margin_right = 286.0
margin_bottom = 52.0
text = "Restart"

[node name="Continue" type="Button" parent="LevelComplete/PanelContainer/VBoxContainer"]
pause_mode = 2
margin_top = 56.0
margin_right = 286.0
margin_bottom = 76.0
text = "Continue"

[node name="MainMenu" type="Button" parent="LevelComplete/PanelContainer/VBoxContainer"]
pause_mode = 2
margin_top = 80.0
margin_right = 286.0
margin_bottom = 100.0
text = "MainMenu"

[node name="GameOver" type="CanvasLayer" parent="."]
pause_mode = 2
visible = false

[node name="PanelContainer" type="PanelContainer" parent="GameOver"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -196.0
margin_right = 150.0
margin_bottom = 196.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/PanelContainer"]
pause_mode = 2
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 385.0

[node name="PanelContainer" type="PanelContainer" parent="GameOver/PanelContainer/VBoxContainer"]
margin_right = 286.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="GameOver/PanelContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 279.0
margin_bottom = 21.0
text = "Game Over"

[node name="Restart" type="Button" parent="GameOver/PanelContainer/VBoxContainer"]
pause_mode = 2
margin_top = 32.0
margin_right = 286.0
margin_bottom = 52.0
text = "Restart"

[node name="Continue" type="Button" parent="GameOver/PanelContainer/VBoxContainer"]
pause_mode = 2
visible = false
margin_top = 42.0
margin_right = 286.0
margin_bottom = 62.0
text = "Continue"

[node name="MainMenu" type="Button" parent="GameOver/PanelContainer/VBoxContainer"]
pause_mode = 2
margin_top = 56.0
margin_right = 286.0
margin_bottom = 76.0
text = "MainMenu"

[node name="Level" type="Label" parent="."]
margin_left = 996.0
margin_top = 34.0
margin_right = 1076.0
margin_bottom = 60.0
text = "Level: 1"

[connection signal="pressed" from="LevelComplete/PanelContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="LevelComplete/PanelContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="LevelComplete/PanelContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="GameOver/PanelContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="GameOver/PanelContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="GameOver/PanelContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
